<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2c3c43"
    android:paddingBottom="1dp"
    android:theme="@style/Theme.TarsusOgrenciBilgiSistemi2"
    tools:context=".Giris.Giris1">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="1dp"
        android:clipToPadding="false"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="346dp"
            android:layout_marginTop="1dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="match_parent"
                android:layout_height="207dp"
                android:layout_margin="40dp"
                android:contentDescription="@string/tarsus_niversitesi"
                app:srcCompat="@drawable/logo2" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:allowUndo="false"
                android:elegantTextHeight="true"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/renc_b_lg_s_stem"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="1dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:drawableStart="@drawable/ic_baseline_mail_outline_24"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/kullan_c_ad_n_z"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textColor="#f2f2f2"
                android:textColorHint="#66F2F2F2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:drawableStart="@drawable/ic_outline_lock_24"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/ifreniz"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColor="#f2f2f2"
                android:textColorHint="#66F2F2F2"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:gravity="center"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/hatirla"
                android:layout_width="117dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:minHeight="48dp"
                android:text="@string/beni_hat_rla"
                android:textColor="#CDF2F2F2" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:backgroundTint="#FFC439"
                android:onClick="giris"
                android:text="@string/giri"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical">

            <TextView

                android:id="@+id/sifreUnuttum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:onClick="act2"
                android:text="@string/ifremi_unuttum"
                android:textColor="#f2f2f2"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/epostaogren"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:onClick="act3"
                android:text="@string/renci_eposta_adresimi_renmek_istiyorum"
                android:textColor="#f2f2f2"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>