<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2c3c43"
    android:paddingBottom="1dp"
    android:theme="@style/Theme.TarsusOgrenciBilgiSistemi2"
    tools:context=".Giris.Giris3">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="1dp"
        android:clipToPadding="false"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="215dp"
            android:layout_marginTop="1dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/tarsus_niversitesi"
                app:srcCompat="@drawable/logo2" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:allowUndo="false"
                android:elegantTextHeight="true"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/renc_b_lg_s_stem"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="305dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="1dp"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextText1act3"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:drawableStart="@drawable/ic_baseline_person_outline_24"
                android:drawablePadding="10dp"
                android:drawableTint="#F2F2F2"
                android:ems="10"
                android:hint="@string/renci_no"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColor="#f2f2f2"
                android:textColorHint="#66F2F2F2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/editTextText2act3"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:drawableStart="@drawable/ic_baseline_person_outline_24"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/renci_ad"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColor="#f2f2f2"
                android:textColorHint="#66F2F2F2"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/editTextText3act3"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:drawableStart="@drawable/ic_baseline_person_outline_24"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/renci_soyad"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColor="#f2f2f2"
                android:textColorHint="#66F2F2F2"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/editTextText4act3"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:drawableStart="@drawable/ic_baseline_person_outline_24"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/anne_ad"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColor="#f2f2f2"
                android:textColorHint="#66F2F2F2"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/editTextText5act3"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:drawableStart="@drawable/ic_baseline_person_outline_24"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/baba_ad"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColor="#f2f2f2"
                android:textColorHint="#66F2F2F2"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:backgroundTint="#FFC439"

                android:onClick="getir"
                android:text="@string/getir"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Vize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:gravity="center"

                android:onClick="act1"
                android:text="@string/anasayfa"
                android:textColor="#f2f2f2"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/Final"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:onClick="act2"
                android:text="@string/ifremi_unuttum"
                android:textColor="#f2f2f2"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>